--- a/css/style.css
+++ b/css/style.css
@@ -36,13 +36,13 @@ body {
 /* Main Section Styles */
 .main {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   padding: 20px;
 }
 
 .aside {
-  width: 40%;
+  width: 100%;
   box-shadow: 0px 0px 3px black;
   padding: 0;
 }
@@ -54,6 +54,7 @@ body {
 
 .article {
   display: flex;
+
   flex-wrap: wrap;
 }
 
